force-app/main/default/objects/Case/fields/Agree_to_Arbitration_Process__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Arbitration_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant - Agree to Arbitration Process</label>
    <type>Checkbox</type>
</CustomField>