force-app/main/default/objects/Case/fields/All_Loss_Items_Settled_Arbitrate__c.field-meta.xml
<CustomField>
    <fullName>All_Loss_Items_Settled_Arbitrate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Loss Items Settled/Arbitrate</label>
    <type>Checkbox</type>
</CustomField>