force-app/main/default/objects/Case/fields/Arbitration_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Accept_Date__c</fullName>
    <label>Arbitration Accept Date</label>
    <type>Date</type>
</CustomField>