force-app/main/default/objects/Case/fields/Arbitration_Completed_Count__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Completed_Count__c</fullName>
    <label>Neg-Arb-4-Arbitration Completed Count</label>
    <summarizedField>Loss_Category__c.Confirm_Case_Settlement__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>