force-app/main/default/objects/Case/fields/Arbitration_Final_Offers_Count__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Final_Offers_Count__c</fullName>
    <label>Neg-Arb-1-Arbitration Final Offers</label>
    <summaryFilterItems>
        <field>Loss_Category__c.Arbitration_Final_Offers_Count__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>