force-app/main/default/objects/Case/fields/Arbitration_Firm__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arbitration Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Firm</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Arbitration Firm)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>