force-app/main/default/objects/Case/fields/Arbitration_Negotiation_Count__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Negotiation_Count__c</fullName>
    <label>Neg-Arb-3-Arbitration Negotiation Count</label>
    <summarizedField>Loss_Category__c.Arbitration_Negotiation_Count__c</summarizedField>
    <summaryForeignKey>Loss_Category__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>