force-app/main/default/objects/Case/fields/Arbitrator_Accept_Decline__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Accept_Decline__c</fullName>
    <inlineHelpText>Arbitrator responds to invitation to arbitrate case</inlineHelpText>
    <label>Arbitrator Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>