force-app/main/default/objects/Case/fields/Arbitrator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arbitrator Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Arbitration_Firm__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Arbitrator Contact)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>