force-app/main/default/objects/Case/fields/Arbitrator_Email__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Email__c</fullName>
    <label>Arbitrator Email</label>
    <type>Email</type>
</CustomField>