force-app/main/default/objects/Case/fields/Arbitrator_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_First_Name__c</fullName>
    <formula>Arbitrator_Contact__r.FirstName</formula>
    <label>Arbitrator First Name</label>
    <type>Text</type>
</CustomField>