force-app/main/default/objects/Case/fields/Cancel_Case__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Case</label>
    <type>Checkbox</type>
</CustomField>