force-app/main/default/objects/Case/fields/Case_Staging__c.field-meta.xml
<CustomField>
    <fullName>Case_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Staging</label>
    <referenceTo>Case_Staging_Table__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>