force-app/main/default/objects/Case/fields/Claimant_Confirms_Case_Settled__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Confirms_Case_Settled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Confirms Case Settled</label>
    <type>Checkbox</type>
</CustomField>