force-app/main/default/objects/Case/fields/Claimant_Firm_Billing_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_Billing_Post_Code__c</fullName>
    <formula>ClaimantFirm__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Firm Billing Post Code</label>
    <type>Text</type>
</CustomField>