force-app/main/default/objects/Case/fields/Claimant_Firm_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_Billing_Street__c</fullName>
    <formula>ClaimantFirm__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Firm Billing Street</label>
    <type>Text</type>
</CustomField>