force-app/main/default/objects/Case/fields/Claimant_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_Name__c</fullName>
    <formula>ClaimantFirm__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Firm Name</label>
    <type>Text</type>
</CustomField>