force-app/main/default/objects/Case/fields/Claimant_Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Firm_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Firm Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Firm_Team__c.Firm__c</field>
            <operation>equals</operation>
            <valueField>$Source.ClaimantFirm__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>