force-app/main/default/objects/Case/fields/Claimant_Handler_Contact__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Handler_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Handler Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Claimant Handler Contact)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>