force-app/main/default/objects/Case/fields/Claimant_Handler_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Handler_First_Name__c</fullName>
    <formula>Claimant_Handler_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Handler First Name</label>
    <type>Text</type>
</CustomField>