force-app/main/default/objects/Case/fields/Claimant_Holding_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Holding_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Holding Negotiation</label>
    <type>Checkbox</type>
</CustomField>