force-app/main/default/objects/Case/fields/Claimant_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Claimant_ID_Number__c</fullName>
    <inlineHelpText>Claimant Party ID Number</inlineHelpText>
    <label>Claimant ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>