force-app/main/default/objects/Case/fields/Claimant_Information__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Information</label>
    <referenceTo>Claimant_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>