force-app/main/default/objects/Case/fields/Claimant_Internal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Internal_Reference_Number__c</fullName>
    <label>Claimant Reference Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>