force-app/main/default/objects/Case/fields/Claimant_Minimum_Personal_Details__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Minimum_Personal_Details__c</fullName>
    <label>Reg-Created-3-Claimant Personal Details</label>
    <summaryFilterItems>
        <field>Claimant_Information__c.Claimant_Date_of_Birth__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claimant_Information__c.Claimant_First_Name__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claimant_Information__c.Claimant_Last_Name__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Claimant_Information__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>