force-app/main/default/objects/Case/fields/Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Position__c</fullName>
    <label>Claimant Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>