force-app/main/default/objects/Case/fields/Claimant_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Submission_Status__c</fullName>
    <label>Claimant Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>