force-app/main/default/objects/Case/fields/Claimant_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Claimant Supervisor)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>