force-app/main/default/objects/Case/fields/Claimant_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Supervisor_Email__c</fullName>
    <label>Claimant Supervisor Email</label>
    <type>Email</type>
</CustomField>