force-app/main/default/objects/Case/fields/Claimant_Team_Handler__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Team_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Team Handler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Partner, Customer Portal Manager, Customer Portal User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>