force-app/main/default/objects/Case/fields/Claimant_Vehicle_Registration_Count__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Vehicle_Registration_Count__c</fullName>
    <label>Reg-Created-2-Claimant Vehicle Reg</label>
    <summaryFilterItems>
        <field>Claimant_Information__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>End to End</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claimant_Information__c.Claimant_Vehicle_Registration_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Claimant_Information__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>