force-app/main/default/objects/Case/fields/ClaimantFirm__c.field-meta.xml
<CustomField>
    <fullName>ClaimantFirm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Claimant Firm)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>