force-app/main/default/objects/Case/fields/Confirm_Doc_Prep_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Doc_Prep_Claimant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Doc Prep Claimant</label>
    <type>Checkbox</type>
</CustomField>