force-app/main/default/objects/Case/fields/Confirm_Final_Offer_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Final_Offer_Claimant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Final Offer Claimant</label>
    <type>Checkbox</type>
</CustomField>