force-app/main/default/objects/Case/fields/Confirm_Items_for_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Items_for_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Items for Arbitration</label>
    <type>Checkbox</type>
</CustomField>