force-app/main/default/objects/Case/fields/Decline_Items_for_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Decline_Items_for_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline Items for Arbitration</label>
    <type>Checkbox</type>
</CustomField>