force-app/main/default/objects/Case/fields/Defendant_Accept_Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Accept_Decline_Date__c</fullName>
    <label>Defendant Accept/Decline Date</label>
    <type>Date</type>
</CustomField>