force-app/main/default/objects/Case/fields/Defendant_Accept_Reject__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Accept_Reject__c</fullName>
    <label>Defendant Accept/Reject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>