force-app/main/default/objects/Case/fields/Defendant_Agree_to_Arbitration_Process__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Agree_to_Arbitration_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant - Agree to Arbitration Process</label>
    <type>Checkbox</type>
</CustomField>