force-app/main/default/objects/Case/fields/Defendant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defendant Firm</inlineHelpText>
    <label>Defendant Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Defendant Firm)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>