force-app/main/default/objects/Case/fields/Defendant_Firm_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Billing_Postal_Code__c</fullName>
    <formula>Defendant_Firm__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Firm Billing Postal Code</label>
    <type>Text</type>
</CustomField>