force-app/main/default/objects/Case/fields/Defendant_Firm_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Billing_Street__c</fullName>
    <formula>Defendant_Firm__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Firm Billing Street</label>
    <type>Text</type>
</CustomField>