force-app/main/default/objects/Case/fields/Defendant_Firm_Case_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Case_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Firm Case Notification Sent</label>
    <type>Checkbox</type>
</CustomField>