force-app/main/default/objects/Case/fields/Defendant_Firm_Team__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Firm Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Firm_Team__c.Firm__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Defendant_Firm__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Firm_Team__c</referenceTo>
    <relationshipLabel>Cases (Defendant Firm Team)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>