force-app/main/default/objects/Case/fields/Defendant_Handler_Contact__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Handler_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Handler Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Defendant Handler Contact)</relationshipLabel>
    <relationshipName>Defendant_Handler</relationshipName>
    <type>Lookup</type>
</CustomField>