force-app/main/default/objects/Case/fields/Defendant_Handler_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Handler_First_Name__c</fullName>
    <formula>Defendant_Handler_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Handler First Name</label>
    <type>Text</type>
</CustomField>