force-app/main/default/objects/Case/fields/Defendant_Handler_Invite_Sent__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Handler_Invite_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Handler Invite Sent</label>
    <type>Checkbox</type>
</CustomField>