force-app/main/default/objects/Case/fields/Defendant_ID_Number_del__c.field-meta.xml
<CustomField>
    <fullName>Defendant_ID_Number_del__c</fullName>
    <inlineHelpText>Defendant Party ID Number</inlineHelpText>
    <label>Defendant ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>