force-app/main/default/objects/Case/fields/Defendant_Information__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Information</label>
    <referenceTo>Defendant_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>