force-app/main/default/objects/Case/fields/Defendant_Internal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Internal_Reference_Number__c</fullName>
    <label>Defendant Reference Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>