force-app/main/default/objects/Case/fields/Defendant_Minimum_Personal_Details__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Minimum_Personal_Details__c</fullName>
    <description>Defendant Minimum Personal Details</description>
    <label>Created-Reg-4-Defendant Min Detail</label>
    <summaryFilterItems>
        <field>Defendant_Information__c.Minimum_requirements__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Defendant_Information__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>