force-app/main/default/objects/Case/fields/Defendant_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Name__c</fullName>
    <formula>Defendant_Information__r.Defendant_First_Name__c + &apos; &apos; + Defendant_Information__r.Defendant_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Name</label>
    <type>Text</type>
</CustomField>