force-app/main/default/objects/Case/fields/Defendant_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Submission_Status__c</fullName>
    <label>Defendant Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>