force-app/main/default/objects/Case/fields/Defendant_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Supervisor</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>