force-app/main/default/objects/Case/fields/Defendant_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Supervisor_Email__c</fullName>
    <label>Defendant Supervisor Email</label>
    <type>Email</type>
</CustomField>