force-app/main/default/objects/Case/fields/Defendant_Team_Handler__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Team_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Team Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>