force-app/main/default/objects/Case/fields/Defendant_Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Vehicle_Registration__c</fullName>
    <description>Checks if registration number was entered.</description>
    <label>Reg-Created-1-Defendant Veh Reg</label>
    <summaryFilterItems>
        <field>Defendant_Information__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>End to End</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Defendant_Information__c.Defendant_Vehicle_Registration_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Defendant_Information__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>