force-app/main/default/objects/Case/fields/Defendent_Firm_Email__c.field-meta.xml
<CustomField>
    <fullName>Defendent_Firm_Email__c</fullName>
    <label>Defendent Firm Email</label>
    <type>Email</type>
</CustomField>