force-app/main/default/objects/Case/fields/Defendent_rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>Defendent_rejection_reason__c</fullName>
    <label>Defendent rejection reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>