force-app/main/default/objects/Case/fields/Duration_Referred__c.field-meta.xml
<CustomField>
    <fullName>Duration_Referred__c</fullName>
    <formula>NOW() - Status_Referred_Date__c</formula>
    <label>Duration Referred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>