force-app/main/default/objects/Case/fields/Facilitator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Facilitator_Firm__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Facilitator Contact)</relationshipLabel>
    <relationshipName>Facilitator_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>