force-app/main/default/objects/Case/fields/Facilitator_Email__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Email__c</fullName>
    <label>Facilitator Email</label>
    <type>Email</type>
</CustomField>