force-app/main/default/objects/Case/fields/Facilitator_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_First_Name__c</fullName>
    <formula>Facilitator_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilitator First Name</label>
    <type>Text</type>
</CustomField>