force-app/main/default/objects/Case/fields/Generate_Arbitration_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Arbitration_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Arbitration Document</label>
    <type>Checkbox</type>
</CustomField>