force-app/main/default/objects/Case/fields/Generate_Notice_of_Commencement__c.field-meta.xml
<CustomField>
    <fullName>Generate_Notice_of_Commencement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Notice of Commencement</label>
    <type>Checkbox</type>
</CustomField>