force-app/main/default/objects/Case/fields/GhostDraftXML__c.field-meta.xml
<CustomField>
    <fullName>GhostDraftXML__c</fullName>
    <label>GhostDraftXML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>