force-app/main/default/objects/Case/fields/Incident_Information__c.field-meta.xml
<CustomField>
    <fullName>Incident_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Information</label>
    <referenceTo>Incident_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>