force-app/main/default/objects/Case/fields/Invite_Arbitrator_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Invite_Arbitrator_Time_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Arbitrator</label>
    <type>Checkbox</type>
</CustomField>