force-app/main/default/objects/Case/fields/Merit_Arbitrated_Count__c.field-meta.xml
<CustomField>
    <fullName>Merit_Arbitrated_Count__c</fullName>
    <label>Neg-Neg-Merit Arbitrated Count</label>
    <summaryFilterItems>
        <field>Merit__c.Status__c</field>
        <operation>equals</operation>
        <value>Arbitrated</value>
    </summaryFilterItems>
    <summaryForeignKey>Merit__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>