force-app/main/default/objects/Case/fields/Merit_Arbitration_Award__c.field-meta.xml
<CustomField>
    <fullName>Merit_Arbitration_Award__c</fullName>
    <label>Neg-Neg-3-Merit Arbitration Award</label>
    <summarizedField>Merit__c.Arbitrator_Award__c</summarizedField>
    <summaryForeignKey>Merit__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>