force-app/main/default/objects/Case/fields/Merit_Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Merit_Claimant_Position__c</fullName>
    <label>Neg-Neg-1-Merit Claimant Position</label>
    <summarizedField>Merit__c.Claimant_Position__c</summarizedField>
    <summaryForeignKey>Merit__c.Related_Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>