force-app/main/default/objects/Case/fields/Merit_Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Merit_Minimum_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merit Minimum Requirements</label>
    <type>Checkbox</type>
</CustomField>